updated ramp go method

--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="var" path="WEBOTS_HOME/lib/controller/java/Controller.jar"/>
 	<classpathentry kind="lib" path="controllers/lib/simlejos.jar"/>
 	<classpathentry kind="lib" path="controllers/lib/EV3WiFiClient.jar"/>
+	<classpathentry kind="var" path="WEBOTS_HOME"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
